[AH] 알코올 히스토리 api 수정
